--- a/ShanxunGetPwd/app/src/main/AndroidManifest.xml
+++ b/ShanxunGetPwd/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.tools.zjd.shanxungetpwd">
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <application
         android:allowBackup="true"
